# coursework-3

./: pyproject.toml
tests/: conftest.py  test_func.py  test_operations.json
untils/: func.py  main.py
